TODO merge editverse.html and versedetail.html into editverse.html modal template

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ bower_components/
 /index.html
 /test.json
 /bible.json
+/static-old-testament.json
+/static-new-testament.json
+# wisdom books: job, psalms, proverb, ecclesiastes, song of songs
+/static-wisdom.json
