--- a/lib/ionic-material/package.json
+++ b/lib/ionic-material/package.json
@@ -35,7 +35,7 @@
     "gulp-livereload": "^3.0.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.1.0",
-    "gulp-uglify": "^0.2.1",
+    "gulp-uglify": "^0.2.1"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^1.1.0",
